--- a/module4-solution/src/restaurant/templates/categoriesList.template.html
+++ b/module4-solution/src/restaurant/templates/categoriesList.template.html
@@ -1,5 +1,5 @@
 <ul>
   <li ng-repeat="item in $ctrl.items">
-    <a ui-sref="menuItems({categoryShortName: item.short_name})">{{item.short_name}} {{ item.name }}</a>
+    <a ui-sref="menuItems({categoryShortName: item.short_name})">{{ item.name }}</a>
   </li>
 </ul>
